--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   dio: ^5.4.0
   image_picker: ^1.0.7
   model_viewer_plus: ^1.7.0
-
+  arcore_flutter_plugin: ^0.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
